# parse

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .pytest.ini  LICENSE  MANIFEST.in  README.rst  README.txt  fparse.py  parse.py  parse_type.py  pyproject.toml  setup.py  test_fparse.py  test_parse.py  test_parse_cardinality.py  test_parse_type.py  test_parse_type_decorator.py  tox.ini  usage_example.rst
.github/: SECURITY.md  dependabot.yml
.github/workflows/: test.yml
parse/: __init__.py  __init__.pyi
tests/: requirements.txt  test_bugs.py  test_parse.py  test_parsetype.py  test_pattern.py  test_result.py  test_typing.py
